--- a/src/css/style.css
+++ b/src/css/style.css
@@ -386,6 +386,7 @@ img {
 	font-size: 60px;
 	margin: 32px 0;
 	color: #674ea7;
+	line-height: 0
 }
 
 .title h2 {
@@ -416,6 +417,7 @@ img {
 	font-size: 24px;
 	color: #674ea7;
 	margin-top: 5px;
+	line-height: 0;
 }
 
 .title h4 {
@@ -424,6 +426,7 @@ img {
 	font-size: 16px;
 	color: #674ea7;
 	margin-top: 5px;
+	line-height: 1;
 }
 
 .title p {
